[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Demo/Scripts/HudUI.gd" id="1_0sli4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_owlwl"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0.847059)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_f4y3b"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_owlwl")

[node name="HudUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_f4y3b")
script = ExtResource("1_0sli4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Steering"
horizontal_alignment = 2

[node name="SteeringScroll" type="HScrollBar" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
min_value = -1.0
max_value = 1.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Throttle"
horizontal_alignment = 2

[node name="ThrottleProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
allow_greater = true

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Speed (px/s)"
horizontal_alignment = 2

[node name="SpeedOutput" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "Speed"
alignment = 1
editable = false

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Power (Nm/s)"
horizontal_alignment = 2

[node name="PowerLabel" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "Power"
alignment = 1
editable = false

[node name="Label8" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Power (hp)"
horizontal_alignment = 2

[node name="PowerHPLabel" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "Power"
alignment = 1
editable = false

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Brake"
horizontal_alignment = 2

[node name="BrakeProgressBar2" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
allow_greater = true

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Gear"
horizontal_alignment = 2

[node name="GearLabel" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
placeholder_text = "Gear"
alignment = 1
editable = false

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Mass (kg)"
horizontal_alignment = 2

[node name="MassLabel2" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
placeholder_text = "Mass"
alignment = 1
editable = false

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BodyVisibilityCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
button_pressed = true
text = "Visible Car Body"
